--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "paths": {
       "@Assets/*": ["src/static/*"],
+      "@Common/*": ["src/common/*"],
       "@Renderer/*": ["src/renderer/*"],
       "@Types/*": ["src/renderer/types/*"],
       "@appigram/react-rangeslider": ["./node_modules/@types/react-rangeslider"]
