--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^11.0.3",
     "@serialport/bindings-cpp": "^12.0.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "^18.2.8",
     "@types/react-beautiful-dnd": "^13.1.5",
     "@types/react-dom": "^18.2.4",
@@ -107,6 +110,7 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "glob": "^10.4.1",
     "html-webpack-plugin": "^5.5.1",
+    "jsdom": "^25.0.1",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.32",
     "postcss-loader": "^7.3.4",
