--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "electron-store": "^8.2.0",
     "electron-window-state": "^5.0.3",
     "framer-motion": "^10.16.16",
+    "html-react-parser": "^5.1.18",
     "lucide-react": "^0.307.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
@@ -171,7 +172,6 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^4.9.0",
     "react-localization": "^1.0.19",
-    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "semver": "^7.5.2",
